cert-manager/yamls/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: certdemo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    name: certdemo
    app: demo
